Fixed an alignment issue with the hero and other sections

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@ body {
   font-size: 1.1rem;
   font-family: var(--Inter);
   line-height: 1.6em;
-  width: 575px;
+  width: 600px;
   margin-top: 30px;
   /* text-align: center; */
 }
